@@ -1,5 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
+*07/02/22:
+   * Make systemtray support XEMBED protocol (Mark)
+     Systemtray.cc/hh
 *07/02/21:
    * Buttons should only run a command if the mouse was clicked down on the
      same button, e.g. bug #1437864 (Mark)
